--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Passenger Screening Algorithm
+description: Description
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
