--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Passenger Screening Algorithm
-description: Description
+description: Aw snap! Under Maintenance
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
