Added description ENV variable

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Passenger Screening Algorithm
-description: Aw snap! Under Maintenance
+description: This project is an attempt to improve the Passenger screening algorithm used by US Department of Homeland Security for recognizing threats at airports. This project was done under the guidance of Dr. Gaurav Harit, Asst. Prof., IIT Jodhpur 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
